--- a/Morgan/Morgan.csproj
+++ b/Morgan/Morgan.csproj
@@ -37,6 +37,9 @@
     <Reference Include="Microsoft.Windows.Shell, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Windows.Shell.3.0.1.0\lib\net40\Microsoft.Windows.Shell.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
@@ -63,10 +66,13 @@
     <Compile Include="Commands\ActionCommand.cs" />
     <Compile Include="Commands\ActionParameterCommand.cs" />
     <Compile Include="DataModel\ApplicationPage.cs" />
+    <Compile Include="IoC\IoC.cs" />
     <Compile Include="Pages\BaseFormPage.xaml.cs">
       <DependentUpon>BaseFormPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\Base\BasePage.cs" />
+    <Compile Include="Services\Implementation\DirectoryService.cs" />
+    <Compile Include="Services\Interfaces\IDirectoryService.cs" />
     <Compile Include="ValueConverters\ApplicationPageToPageConverter.cs" />
     <Compile Include="ValueConverters\Base\BaseValueConverter.cs" />
     <Compile Include="ValueConverters\BooleanToVisibilityConverter.cs" />
