--- a/Morgan/packages.config
+++ b/Morgan/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Windows.Shell" version="3.0.1.0" targetFramework="net461" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net461" />
+  <package id="taglib" version="2.1.0.0" targetFramework="net47" />
 </packages>
