Created a basic control for music list items

--- a/Morgan/Morgan.csproj
+++ b/Morgan/Morgan.csproj
@@ -72,6 +72,9 @@
     <Compile Include="AttachedProperties\TextBoxAttachedProperties.cs" />
     <Compile Include="Commands\ActionCommand.cs" />
     <Compile Include="Commands\ActionParameterCommand.cs" />
+    <Compile Include="Controls\MusicListItemControl.xaml.cs">
+      <DependentUpon>MusicListItemControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DataModel\ApplicationPage.cs" />
     <Compile Include="IoC\IoC.cs" />
     <Compile Include="Pages\BaseFormPage.xaml.cs">
@@ -97,6 +100,10 @@
     <Compile Include="ViewModel\Pages\FileStructureViewModel.cs" />
     <Compile Include="Window\WindowResizer.cs" />
     <Compile Include="Window\WindowViewModel.cs" />
+    <Page Include="Controls\MusicListItemControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -171,7 +178,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controls\" />
     <Folder Include="Images\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
