Now that the LocationAdded Indicator is functional

--- a/Morgan/Morgan.csproj
+++ b/Morgan/Morgan.csproj
@@ -89,10 +89,11 @@
     <Compile Include="Services\Implementation\MetadataService.cs" />
     <Compile Include="Services\Interfaces\IDirectoryService.cs" />
     <Compile Include="Services\Interfaces\IMetadataService.cs" />
-    <Compile Include="ValueConverters\ApplicationPageToPageConverter.cs" />
+    <Compile Include="ValueConverters\Common\ApplicationPageToPageConverter.cs" />
     <Compile Include="ValueConverters\Base\BaseValueConverter.cs" />
-    <Compile Include="ValueConverters\BooleanToVisibilityConverter.cs" />
-    <Compile Include="ValueConverters\BooleanToVisibilityInvertConverter.cs" />
+    <Compile Include="ValueConverters\Common\BooleanToVisibilityConverter.cs" />
+    <Compile Include="ValueConverters\Common\BooleanToVisibilityInvertConverter.cs" />
+    <Compile Include="ValueConverters\LocationAddedOpacityFlagConverter.cs" />
     <Compile Include="ViewModel\ApplicationViewModel.cs" />
     <Compile Include="ViewModel\Controls\MusicFileViewModel.cs" />
     <Compile Include="ViewModel\Pages\BaseFormPageViewModel.cs" />
