--- a/Morgan/Morgan.csproj
+++ b/Morgan/Morgan.csproj
@@ -78,12 +78,15 @@
     <Compile Include="DataModel\ApplicationPage.cs" />
     <Compile Include="Extensions\StringHelpers.cs" />
     <Compile Include="IoC\IoC.cs" />
-    <Compile Include="Pages\HomePage.xaml.cs">
+    <Compile Include="Pages\Home\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\Base\BasePage.cs" />
-    <Compile Include="Pages\FileStructurePage.xaml.cs">
-      <DependentUpon>FileStructurePage.xaml</DependentUpon>
+    <Compile Include="Pages\Home\ViewFilePage.xaml.cs">
+      <DependentUpon>ViewFilePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Settings\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Services\Implementation\DirectoryService.cs" />
     <Compile Include="Services\Implementation\MetadataService.cs" />
@@ -98,7 +101,8 @@
     <Compile Include="ViewModel\Controls\MusicFileViewModel.cs" />
     <Compile Include="ViewModel\Base\BaseViewModel.cs" />
     <Compile Include="ViewModel\Base\ViewModelBag.cs" />
-    <Compile Include="ViewModel\Pages\FileStructureViewModel.cs" />
+    <Compile Include="ViewModel\Controls\SideMenuControlViewModel.cs" />
+    <Compile Include="ViewModel\Pages\ViewFilePageViewModel.cs" />
     <Compile Include="ViewModel\Pages\HomePageViewModel.cs" />
     <Compile Include="Window\WindowResizer.cs" />
     <Compile Include="Window\WindowViewModel.cs" />
@@ -118,11 +122,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Pages\HomePage.xaml">
+    <Page Include="Pages\Home\HomePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\FileStructurePage.xaml">
+    <Page Include="Pages\Home\ViewFilePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\Settings\SettingsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
