--- a/Morgan/Morgan.csproj
+++ b/Morgan/Morgan.csproj
@@ -75,6 +75,7 @@
     </ApplicationDefinition>
     <Compile Include="Animation\Data\SlideDirections.cs" />
     <Compile Include="Animation\FrameworkElementAnimation.cs" />
+    <Compile Include="Animation\Property\SlideFromTopProperty.cs" />
     <Compile Include="AttachedProperties\SideMenuAttachedProperty.cs" />
     <Compile Include="AttachedProperties\ButtonAttachedProperties.cs" />
     <Compile Include="Animation\Property\SlideFromBottomProperty.cs" />
@@ -83,6 +84,9 @@
     <Compile Include="Commands\ActionParameterCommand.cs" />
     <Compile Include="Controls\ButtonPanelControl.xaml.cs">
       <DependentUpon>ButtonPanelControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\PopupMenuControl.xaml.cs">
+      <DependentUpon>PopupMenuControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\SideMenuControl.xaml.cs">
       <DependentUpon>SideMenuControl.xaml</DependentUpon>
@@ -117,13 +121,19 @@
     <Compile Include="ViewModel\Controls\MusicFileViewModel.cs" />
     <Compile Include="ViewModel\Base\BaseViewModel.cs" />
     <Compile Include="ViewModel\Base\ViewModelBag.cs" />
+    <Compile Include="ViewModel\Controls\PopupMenuViewModel.cs" />
     <Compile Include="ViewModel\Controls\SideMenuControlViewModel.cs" />
+    <Compile Include="ViewModel\Design\PopupMenuDesignModel.cs" />
     <Compile Include="ViewModel\Design\SideMenuControlDesignModel.cs" />
     <Compile Include="ViewModel\Pages\ViewFilePageViewModel.cs" />
     <Compile Include="ViewModel\Pages\HomePageViewModel.cs" />
     <Compile Include="Window\WindowResizer.cs" />
     <Compile Include="Window\WindowViewModel.cs" />
     <Page Include="Controls\ButtonPanelControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\PopupMenuControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
