--- a/Morgan/Morgan.csproj
+++ b/Morgan/Morgan.csproj
@@ -82,8 +82,6 @@
     <Compile Include="AttachedProperties\SideMenuAttachedProperty.cs" />
     <Compile Include="AttachedProperties\ButtonAttachedProperties.cs" />
     <Compile Include="AttachedProperties\TextBoxAttachedProperties.cs" />
-    <Compile Include="Commands\ActionCommand.cs" />
-    <Compile Include="Commands\ActionParameterCommand.cs" />
     <Compile Include="Controls\ButtonPanelControl.xaml.cs">
       <DependentUpon>ButtonPanelControl.xaml</DependentUpon>
     </Compile>
@@ -96,10 +94,6 @@
     <Compile Include="Controls\SideMenuControl.xaml.cs">
       <DependentUpon>SideMenuControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DataModel\ApplicationPage.cs" />
-    <Compile Include="DataModel\ApplicationSubPage.cs" />
-    <Compile Include="Extensions\StringHelpers.cs" />
-    <Compile Include="IoC\IoC.cs" />
     <Compile Include="Pages\Home\Base\BaseHomePage.xaml.cs">
       <DependentUpon>BaseHomePage.xaml</DependentUpon>
     </Compile>
@@ -113,30 +107,12 @@
     <Compile Include="Pages\Settings\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Services\Implementation\DirectoryService.cs" />
-    <Compile Include="Services\Implementation\MetadataService.cs" />
-    <Compile Include="Services\Implementation\FileStructureService.cs" />
-    <Compile Include="Services\Interfaces\IDirectoryService.cs" />
-    <Compile Include="Services\Interfaces\IFileStructureService.cs" />
-    <Compile Include="Services\Interfaces\IMetadataService.cs" />
-    <Compile Include="DataModel\FileHierachicalOrder.cs" />
-    <Compile Include="DataModel\TagType.cs" />
+    <Compile Include="Services\DirectoryService.cs" />
     <Compile Include="ValueConverters\ApplicationPageConverter.cs" />
     <Compile Include="ValueConverters\ApplicationSubPageConverter.cs" />
     <Compile Include="ValueConverters\Base\BaseValueConverter.cs" />
     <Compile Include="ValueConverters\BoolToVisibilityConverter.cs" />
     <Compile Include="ValueConverters\BoolToVisibilityInvertConverter.cs" />
-    <Compile Include="ViewModel\ApplicationViewModel.cs" />
-    <Compile Include="ViewModel\Controls\MusicFileViewModel.cs" />
-    <Compile Include="ViewModel\Base\BaseViewModel.cs" />
-    <Compile Include="ViewModel\Base\ViewModelBag.cs" />
-    <Compile Include="ViewModel\Controls\PopupMenuViewModel.cs" />
-    <Compile Include="ViewModel\Controls\SettingsFormViewModel.cs" />
-    <Compile Include="ViewModel\Controls\SideMenuControlViewModel.cs" />
-    <Compile Include="ViewModel\Design\PopupMenuDesignModel.cs" />
-    <Compile Include="ViewModel\Design\SideMenuControlDesignModel.cs" />
-    <Compile Include="ViewModel\Pages\ViewFilePageViewModel.cs" />
-    <Compile Include="ViewModel\Pages\HomePageViewModel.cs" />
     <Compile Include="Window\WindowResizer.cs" />
     <Compile Include="Window\WindowViewModel.cs" />
     <Page Include="Controls\ButtonPanelControl.xaml">
@@ -238,6 +214,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Morgan.Core\Morgan.Core.csproj">
+      <Project>{9d13af8e-0f20-4c94-b641-8555d18b92ff}</Project>
+      <Name>Morgan.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.2.2.1.0\build\net452\Fody.targets" Condition="Exists('..\packages\Fody.2.2.1.0\build\net452\Fody.targets')" />
