--- a/Morgan.Core/Morgan.Core.csproj
+++ b/Morgan.Core/Morgan.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ninject" Version="3.2.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.2.2" />
     <PackageReference Include="taglib" Version="2.1.0" />
   </ItemGroup>
