--- a/Morgan/packages.config
+++ b/Morgan/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fody" version="2.2.1.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Windows.Shell" version="3.0.1.0" targetFramework="net461" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="2.2.2.0" targetFramework="net47" developmentDependency="true" />
   <package id="taglib" version="2.1.0.0" targetFramework="net47" />
 </packages>
